--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Edit meta tags for SEO -->
-    <title>My Portfolio | Sourabh Kumar</title>
-    <meta name="title" content="My Portfolio | Sourabh Kumar">
+    <title>My Portfolio | Sneha Giranje</title>
+    <meta name="title" content="My Portfolio | Sneha Giranje">
     <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
 
     <!-- Open Graph / Facebook -->
